# octocopter

./: .gitmodules  README.md
3d-data/: oktokopter.max
basestation/: CMakeLists.txt  audioplayer.cpp  audioplayer.h  basestation.cpp  basestation.h  bulletdebugdrawergl.cpp  camerawidget.cpp  camerawidget.h  camerawindow.cpp  cloudexporter.cpp  cloudexporter.h  computefreecolumns.cu  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  controlwidget.cpp  controlwidget.h  controlwidget.ui  cuda.cpp  cuda.h  cudahelper.cpp  cudahelper.cu  cudahelper.cuh  cudahelper.h  cudashaders.cpp  cudashaders.h  diffcorrfetcher.cpp  diffcorrfetcher.h  flightplannerbasic.cpp  flightplannerbasic.h  flightplannercuda.cpp  flightplannercuda.h  flightplannerinterface.cpp  flightplannerinterface.h  flightplannerparticles.cpp  flightplannerparticles.h  flightplannerparticlesdialog.cpp  flightplannerparticlesdialog.h  flightplannerparticlesdialog.ui  flightplannerphysics.cpp  (+96 more)
basestation/media/: cone-blue.mtl  cone-green.mtl  cone-grey.mtl  cone-red.mtl  controller-d.mtl  controller-i.mtl  controller-p.mtl  hokuyoutm30lx.mtl  oktokopter-thrust.mtl  oktokopter-yawpitchroll.mtl  oktokopter.mtl  ptu-base.mtl  ptu-pan.mtl  ptu-tilt.mtl  target.mtl  trajectory-goal.mtl  trajectory-start.mtl  velocity-arrow.mtl
basestation/tests/: testpcdreduction.cpp  testpcdreduction.h
cloudcompare/: CMakeLists.txt  main.cpp
common/: almanac.cpp  almanac.h  baseconnection.cpp  baseconnection.h  box3d.cpp  box3d.h  common.cpp  common.h  coordinateconverter.cpp  coordinateconverter.h  coordinategps.cpp  coordinategps.h  flightcontroller.cpp  flightcontroller.h  flightcontroller.ods  flightcontrollervalues.cpp  flightcontrollervalues.h  flightstate.cpp  flightstate.h  flightstaterestriction.cpp  flightstaterestriction.h  flightstateswitch.cpp  flightstateswitch.h  gnssstatus.cpp  gnssstatus.h  gnssstatusinformation.cpp  gnssstatusinformation.h  gnsstime.cpp  gnsstime.h  gpsstatusinformation.cpp  gpsstatusinformation.h  joystick.cpp  joystick.h  lidarpoint.cpp  lidarpoint.h  logfile.cpp  logfile.h  messagehandler.cpp  messagehandler.h  motioncommand.cpp  (+31 more)
common/sgp4sdp4/: sgp4sdp4.c  sgp4sdp4.h  sgp_in.c  sgp_math.c  sgp_obs.c
common/tsp/: fasttsp.cpp  graph.cpp  graph.h  opttsp.cpp  path.cpp  path.h  pathinfo.cpp  pathinfo.h
fclogconverter/: CMakeLists.txt  fclogconverter.cpp
filewriter/: CMakeLists.txt  filetowrite.cpp  filetowrite.h  filewriter.cpp  filewriter.h  readme.txt
hokuyoid/: CMakeLists.txt  main.cpp
koptercontrol/: CMakeLists.txt  camera.cpp  camera.h  flightcontroller.cpp  flightcontroller.h  gnssdevice.cpp  gnssdevice.h  gpsdevice.cpp  gpsdevice.h  hokuyo.cpp  hokuyo.h  hokuyoros.cpp  hokuyoros.h  kopter.cpp  kopter.h  koptercontrol.cpp  koptercontrol.h  koptercontrol.pro  koptermessage.cpp  koptermessage.h  laserscanner.cpp  laserscanner.h  logplayer.cpp  logplayer.h  logreplay.cpp  messagehandler.cpp  messagehandler.h  rtkfetcher.cpp  rtkfetcher.h  sensorfuser.cpp  sensorfuser.h  setup_tmp_fs  visualodometry.cpp  visualodometry.h
lrflogwriter/: CMakeLists.txt  lrflogwriter.cpp  lrflogwriter.h
lrfreader/: CMakeLists.txt  laserscanner.cpp  laserscanner.h  main.cpp
lrfreader/urg-0.8.11/src/cpp/system/: Lock.h  LockGuard.h  Semaphore.h
paper/On Physics-Based 3D Waypoint Generation/: bilder.txt  paper.tex  plotefficiency.p  sample_new.tex
portlink/: CMakeLists.txt  linkKopterToPort10001  linkSeptentrioComToRtkBase  linkSeptentrioUsbToPort10001  networkclient.cpp  networkclient.h  networkserver.cpp  networkserver.h  port.h  portlink.cpp  portlink.h  serialport.cpp  serialport.h
rtkbase/: gpsdevice.cpp  gpsdevice.h  rtkbase.cpp  rtkbase.h  rtkbase.pro  server.cpp  server.h
scanconverter/: CMakeLists.txt  scanconverter.cpp
simulator/: CMakeLists.txt  baseconnection.cpp  baseconnection.h  battery.cpp  battery.h  camera.cpp  camera.h  coordinateconverter.cpp  coordinateconverter.h  coordinategps.cpp  coordinategps.h  coordinateogre.cpp  coordinateogre.h  create-desktopfile.sh  dialogconfiguration.cpp  dialogconfiguration.h  dialogconfiguration.ui  engine.cpp  engine.h  flightcontroller.cpp  flightcontroller.h  joystick.cpp  joystick.h  laserscan.cpp  laserscan.h  laserscanner.cpp  laserscanner.h  main.cpp  ogrewidget.cpp  ogrewidget.h  physics.cpp  physics.h  plugins.cfg.in  plugins_d.cfg.in  propeller.cpp  propeller.h  resources.cfg  simulationcontrolwidget.cpp  simulationcontrolwidget.h  simulationcontrolwidget.ui  (+8 more)
simulator/BtOgre/: BtOgre.cpp  BtOgreExtras.h  BtOgreGP.h  BtOgrePG.h
simulator/media/: resources.cfg  terrain.cfg
simulator/media/materials/: Materials.material  b.material  camera.material  church.material  engine.material  f.material  hokuyoutm30lx.material  house1.material  house2.material  l.material  oktokopter.material  quad.material  quadrocopter.material  r.material  tree1.material  tree2.material  tree3.material  tree4.material  tree5.material  tree6.material  tree7.material  windmill.material
simulator/media/materials/programs/: skinningTwoWeightsVp.glsl
simulator/media/materials/scripts/: Examples.program
simulator/media/models/: Cube.mesh  Sphere.mesh  b.mesh  camera.mesh  church.mesh  engine.mesh  engineCCW.mesh  engineCW.mesh  f.mesh  hokuyoutm30lx.mesh  house1.mesh  house2.mesh  l.mesh  oktokopter.mesh  quad.mesh  quadrocopter.mesh  r.mesh  tree1.mesh  tree2.mesh  tree3.mesh  tree4.mesh  tree5.mesh  tree6.mesh  tree7.mesh  tudorhouse.mesh  windmill.mesh
simulator/media/textures/: terrain1.dds  terrain2.dds  terrain3.dds
triangulator/: CMakeLists.txt  bulletdebugdrawergl.cpp  bulletdebugdrawergl.h  camerawindow.cpp  camerawindow.h  cloudexporter.cpp  cloudexporter.h  controlwidget.cpp  controlwidget.h  controlwidget.ui  flightplanner.cpp  flightplanner.h  flightplannerbasic.cpp  flightplannerbasic.h  flightplannerinterface.cpp  flightplannerinterface.h  flightplannerphysics.cpp  flightplannerphysics.h  glwidget.cpp  glwidget.h  logwidget.h  logwidget.ui  main.cpp  physicssphere.h  triangulator.cpp  triangulator.h
(+12 files in other folders)
